deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      labels:
        app: apigateway
    spec:
      containers:
        - name: apigateway
          image: gcr.io/projetoptiptr-307918/apigateway:v1
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 100m
            memory: 250Mi
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 300
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 300
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 10

---
#Service
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: apigateway
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http

---
#Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: myunirent-ip
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: myunirent.pt
      http:
        paths:
          - backend:
              serviceName: service
              servicePort: 80
